Fix MixedField compilation